# snake-rust

./: Cargo.toml  index.html
src/: lib.rs  snake.rs
